# TestTaskRayApp

./: .env.dev  Dockerfile  README.md  config.py  cron.py  data.json  docker-compose.yml  docker-entrypoint.dev.sh  entrypoint.prod.sh  pyproject.toml  pytest.ini
product_catalog/: settings.py  urls.py
products/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
products/api/v1/: api_views.py
products/migrations/: 0001_initial.py  0002_alter_product_image.py  0003_alter_product_image.py  0004_remove_product_image_product_image.py  0005_rename_image_product_images.py
products/templates/products/: base.html  index__.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
products/templates/products/includes/: inc_main_menu.html
tests/: conftest.py  factores.py  s_test.py
tests/products/api/: api_product_list_create_test.py  api_product_list_delete_test.py  api_product_list_update_test.py  api_product_list_view_test.py  api_product_view_test.py
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
