[tool.poetry]
name = "testtaskrayapp"
version = "0.1.0"
description = ""
authors = ["BityutskiyNA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "4.2.7"
psycopg2 = "^2.9.9"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
